--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-/* Reset default browser styles */
 html, body, #root {
   margin: 0;
   padding: 0;
@@ -6,7 +5,7 @@ html, body, #root {
   height: 100%;
 }
 
-/* Global font styles */
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -15,17 +14,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* Code block font styles */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-/* Application-specific styles */
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f0f0f0; /* Set a light background color */
+  background-color: #f0f0f0; 
 }
 
 #root {
@@ -49,10 +46,9 @@ canvas {
 
 /* Style the spotlight */
 .spotlight {
-  background-color: rgba(255, 255, 240, 0.8); /* Set a soft, warm spotlight color */
+  background-color: rgba(255, 255, 240, 0.8); 
 }
 
-/* Style the scrollbar */
 ::-webkit-scrollbar {
   width: 8px;
 }
